--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- Navbar Section -->
     <nav
-      class="navbar navbar-expand-lg bg-transparent fixed-top "
+      class="navbar navbar-expand-lg bg-transparent fixed-top"
       data-bs-theme="dark"
     >
       <div class="container">
@@ -129,7 +129,7 @@
       class="landing d-flex justify-content-center align-items-center"
       id="home"
     >
-      <div class="text-center " id="landingContent">
+      <div class="text-center" id="landingContent">
         <h1 class="fw-bolder text-light">
           <span class="text-info">Smart</span>School
         </h1>
@@ -154,7 +154,7 @@
       <div class="container">
         <div class="main-title mt-3 mb-5 position-relative">
           <h1 class="shadowww text-white">FUnctions</h1>
-          <h2 class="text-uppercase title-shadowww ">What we DO ?</h2>
+          <h2 class="text-uppercase title-shadowww">What we DO ?</h2>
           <p class="text-info fw-bold">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum ut
           </p>
@@ -187,19 +187,19 @@
           >
             <div class="feat">
               <i class="fa-solid fa-graduation-cap fa-4x icon p-3"></i>
-            
-            <h4 class="mb-3 text-uppercase text-primary">Gestion Etudiant</h4>
-            <p class="text-black lh-lg">
-              Administrer les données et les activités liées aux étudiants au
-              sein d'une institution éducative. Cela inclut la gestion des
-              inscriptions, des dossiers académiques, des horaires de cours, des
-              notes, des absences, des informations personnelles, ainsi que la
-              communication avec les étudiants et leurs familles. Une gestion
-              efficace des étudiants vise à assurer un suivi précis de leur
-              parcours académique et à faciliter leur expérience d'apprentissage
-              tout au long de leur scolarité.
-            </p>
-          </div>
+
+              <h4 class="mb-3 text-uppercase text-primary">Gestion Etudiant</h4>
+              <p class="text-black lh-lg">
+                Administrer les données et les activités liées aux étudiants au
+                sein d'une institution éducative. Cela inclut la gestion des
+                inscriptions, des dossiers académiques, des horaires de cours,
+                des notes, des absences, des informations personnelles, ainsi
+                que la communication avec les étudiants et leurs familles. Une
+                gestion efficace des étudiants vise à assurer un suivi précis de
+                leur parcours académique et à faciliter leur expérience
+                d'apprentissage tout au long de leur scolarité.
+              </p>
+            </div>
           </div>
           <div
             class="col-md-6 col-lg-4 animate-on-scroll cage cage1 alert alert-danger"
@@ -227,7 +227,7 @@
     <div class="multi text-center pt-5 pb-5 bg-light" id="multi">
       <div class="container">
         <div class="main-title mt-3 mb-5 position-relative">
-          <h1 class="shadowww-2 ">FLEXIBLE</h1>
+          <h1 class="shadowww-2">FLEXIBLE</h1>
           <i class="fa-solid fa-laptop text-primary fs-1"></i>
           <h2 class="text-uppercase deco">Multiplateforme</h2>
           <p>VOUS POUVEZ Y ACCÉDER DEPUIS N'IMPORTE QUEL APPAREIL</p>
@@ -272,10 +272,10 @@
       </div>
     </div>
     <!-- Interface -->
-    <div class="view text-center bg-info p-2 bg-opacity-25 pt-5 pb-5" id="view">
+    <div class="view text-center  bg-info bg-opacity-25 p-2  pt-5 pb-5" id="view">
       <div class="container">
         <div class="main-title mt-3 mb-5 position-relative">
-          <h1 class="shadowww ">Interface</h1>
+          <h1 class="shadowww">Interface</h1>
           <h2 class="text-uppercase title-shadowww">VIEW</h2>
           <p class="text-info fw-bold">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum ut
@@ -567,18 +567,30 @@
     </div>
 
     <!-- pricing section -->
-    <div class="price bg-success-subtle text-center pt-5 pb-5" id="packs">
+    <div class="price bg-info bg-opacity-25 text-center pt-5 pb-5" id="packs">
       <div class="container">
         <div class="main-title mt-3 mb-5 position-relative">
           <div class="title-area justify-content-center text-center">
-            <h1 class="shadowww ">pricing</h1>
+            <h1 class="shadowww">pricing</h1>
             <h2 class="text-uppercase title-shadowww">prix packs</h2>
             <p class="text-info fw-bold">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum ut
             </p>
           </div>
         </div>
-        <div class="pricing pricing-palden">
+        <div class="row">
+          <div class="col-12">
+            <div class="inner d-flex tabsBtnHolder">
+              <ul>
+                <li><p id="monthly" class="active m-auto fw-bold">Monthly</p></li>
+                <li><p id="yearly" class="m-auto fw-bold">Yearly</p></li>
+
+                <li class="indicator"></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="pricing pricing-palden monthlyPriceList">
           <div
             class="pricing-item features-item ja-animate"
             data-animation="move-from-bottom"
@@ -695,9 +707,10 @@
               <li class="pricing-feature">Maintenance</li>
               <li class="pricing-feature">Mise à jour</li>
               <li class="pricing-feature">Support technique</li>
-             
             </ul>
-            <button class="pricing-action business" type="submit">Choose plan</button>
+            <button class="pricing-action business" type="submit">
+              Choose plan
+            </button>
           </div>
           <div
             class="pricing-item features-item ja-animate"
@@ -754,9 +767,189 @@
               <li class="pricing-feature">RH & Paie</li>
               <li class="pricing-feature">Contrôle & sécurité</li>
             </ul>
-            <button  class="pricing-action" type="submit">Choose plan</button>
+            <button class="pricing-action" type="submit">Choose plan</button>
           </div>
-        </div>
+        </div> 
+            <div class="pricing pricing-palden d-none yearlyPriceList ">
+          <div
+            class="pricing-item features-item ja-animate"
+            data-animation="move-from-bottom"
+            data-delay="item-0"
+            style="min-height: 497px"
+          >
+            <div class="pricing-deco">
+              <svg
+                class="pricing-deco-img"
+                enable-background="new 0 0 300 100"
+                height="100px"
+                id="Layer_1"
+                preserveAspectRatio="none"
+                version="1.1"
+                viewBox="0 0 300 100"
+                width="300px"
+                x="0px"
+                xml:space="preserve"
+                y="0px"
+              >
+                <path
+                  class="deco-layer deco-layer--1"
+                  d="M30.913,43.944c0,0,42.911-34.464,87.51-14.191c77.31,35.14,113.304-1.952,146.638-4.729c48.654-4.056,69.94,16.218,69.94,16.218v54.396H30.913V43.944z"
+                  fill="#FFFFFF"
+                  opacity="0.6"
+                ></path>
+                <path
+                  class="deco-layer deco-layer--2"
+                  d="M-35.667,44.628c0,0,42.91-34.463,87.51-14.191c77.31,35.141,113.304-1.952,146.639-4.729c48.653-4.055,69.939,16.218,69.939,16.218v54.396H-35.667V44.628z"
+                  fill="#FFFFFF"
+                  opacity="0.6"
+                ></path>
+                <path
+                  class="deco-layer deco-layer--3"
+                  d="M43.415,98.342c0,0,48.283-68.927,109.133-68.927c65.886,0,97.983,67.914,97.983,67.914v3.716H42.401L43.415,98.342z"
+                  fill="#FFFFFF"
+                  opacity="0.7"
+                ></path>
+                <path
+                  class="deco-layer deco-layer--4"
+                  d="M-34.667,62.998c0,0,56-45.667,120.316-27.839C167.484,57.842,197,41.332,232.286,30.428c53.07-16.399,104.047,36.903,104.047,36.903l1.333,36.667l-372-2.954L-34.667,62.998z"
+                  fill="#FFFFFF"
+                ></path>
+              </svg>
+              <div class="pricing-price">
+                <span class="pricing-currency">$</span>299
+                <span class="pricing-period">/ An</span>
+              </div>
+              <h3 class="pricing-title">BASIC</h3>
+            </div>
+            <ul class="pricing-feature-list">
+              <li class="pricing-feature">Admission & inscription</li>
+              <li class="pricing-feature">Finance & comptabilité</li>
+              <li class="pricing-feature">Messagerie & partage</li>
+            </ul>
+            <button class="pricing-action" type="submit">Choose plan</button>
+          </div>
+          <div
+            class="pricing-item features-item popular ja-animate pricing__item--featured"
+            data-animation="move-from-bottom"
+            data-delay="item-1"
+            style="min-height: 497px"
+          >
+            <div class="label">Most Popular</div>
+            <div
+              class="pricing-deco"
+              style="background: linear-gradient(135deg, #a93bfe, #584efd)"
+            >
+              <svg
+                class="pricing-deco-img"
+                enable-background="new 0 0 300 100"
+                height="100px"
+                id="Layer_1"
+                preserveAspectRatio="none"
+                version="1.1"
+                viewBox="0 0 300 100"
+                width="300px"
+                x="0px"
+                xml:space="preserve"
+                y="0px"
+              >
+                <path
+                  class="deco-layer deco-layer--1"
+                  d="M30.913,43.944c0,0,42.911-34.464,87.51-14.191c77.31,35.14,113.304-1.952,146.638-4.729c48.654-4.056,69.94,16.218,69.94,16.218v54.396H30.913V43.944z"
+                  fill="#FFFFFF"
+                  opacity="0.6"
+                ></path>
+                <path
+                  class="deco-layer deco-layer--2"
+                  d="M-35.667,44.628c0,0,42.91-34.463,87.51-14.191c77.31,35.141,113.304-1.952,146.639-4.729c48.653-4.055,69.939,16.218,69.939,16.218v54.396H-35.667V44.628z"
+                  fill="#FFFFFF"
+                  opacity="0.6"
+                ></path>
+                <path
+                  class="deco-layer deco-layer--3"
+                  d="M43.415,98.342c0,0,48.283-68.927,109.133-68.927c65.886,0,97.983,67.914,97.983,67.914v3.716H42.401L43.415,98.342z"
+                  fill="#FFFFFF"
+                  opacity="0.7"
+                ></path>
+                <path
+                  class="deco-layer deco-layer--4"
+                  d="M-34.667,62.998c0,0,56-45.667,120.316-27.839C167.484,57.842,197,41.332,232.286,30.428c53.07-16.399,104.047,36.903,104.047,36.903l1.333,36.667l-372-2.954L-34.667,62.998z"
+                  fill="#FFFFFF"
+                ></path>
+              </svg>
+              <div class="pricing-price">
+                <span class="pricing-currency">$</span>1599
+                <span class="pricing-period">/ An</span>
+              </div>
+              <h3 class="pricing-title">PREMIUM</h3>
+            </div>
+            <ul class="pricing-feature-list">
+              <li class="pricing-feature">Applications Mobile</li>
+              <li class="pricing-feature">Maintenance</li>
+              <li class="pricing-feature">Mise à jour</li>
+              <li class="pricing-feature">Support technique</li>
+            </ul>
+            <button class="pricing-action business" type="submit">
+              Choose plan
+            </button>
+          </div>
+          <div
+            class="pricing-item features-item ja-animate"
+            data-animation="move-from-bottom"
+            data-delay="item-2"
+            style="min-height: 497px"
+          >
+            <div class="pricing-deco">
+              <svg
+                class="pricing-deco-img"
+                enable-background="new 0 0 300 100"
+                height="100px"
+                id="Layer_1"
+                preserveAspectRatio="none"
+                version="1.1"
+                viewBox="0 0 300 100"
+                width="300px"
+                x="0px"
+                xml:space="preserve"
+                y="0px"
+              >
+                <path
+                  class="deco-layer deco-layer--1"
+                  d="M30.913,43.944c0,0,42.911-34.464,87.51-14.191c77.31,35.14,113.304-1.952,146.638-4.729c48.654-4.056,69.94,16.218,69.94,16.218v54.396H30.913V43.944z"
+                  fill="#FFFFFF"
+                  opacity="0.6"
+                ></path>
+                <path
+                  class="deco-layer deco-layer--2"
+                  d="M-35.667,44.628c0,0,42.91-34.463,87.51-14.191c77.31,35.141,113.304-1.952,146.639-4.729c48.653-4.055,69.939,16.218,69.939,16.218v54.396H-35.667V44.628z"
+                  fill="#FFFFFF"
+                  opacity="0.6"
+                ></path>
+                <path
+                  class="deco-layer deco-layer--3"
+                  d="M43.415,98.342c0,0,48.283-68.927,109.133-68.927c65.886,0,97.983,67.914,97.983,67.914v3.716H42.401L43.415,98.342z"
+                  fill="#FFFFFF"
+                  opacity="0.7"
+                ></path>
+                <path
+                  class="deco-layer deco-layer--4"
+                  d="M-34.667,62.998c0,0,56-45.667,120.316-27.839C167.484,57.842,197,41.332,232.286,30.428c53.07-16.399,104.047,36.903,104.047,36.903l1.333,36.667l-372-2.954L-34.667,62.998z"
+                  fill="#FFFFFF"
+                ></path>
+              </svg>
+              <div class="pricing-price">
+                <span class="pricing-currency">$</span>999
+                <span class="pricing-period">/ An</span>
+              </div>
+              <h3 class="pricing-title">STANDARD</h3>
+            </div>
+            <ul class="pricing-feature-list">
+              <li class="pricing-feature">Bibliothèque & matèriel</li>
+              <li class="pricing-feature">RH & Paie</li>
+              <li class="pricing-feature">Contrôle & sécurité</li>
+            </ul>
+            <button class="pricing-action" type="submit">Choose plan</button>
+          </div>
+            </div>
       </div>
     </div>
 
@@ -764,14 +957,18 @@
     <div class="subscribe bg-light pt-5 pb-5 text-center text-md-start">
       <div class="container">
         <div class="position-relative">
-        <h1 class="shadowww-2 title-area justify-content-center text-center">Newsletter</h1>
-              </div>
-        <form class="row align-items-center" style="padding-top: 2em;">
+          <h1 class="shadowww-2 title-area justify-content-center text-center">
+            Newsletter
+          </h1>
+        </div>
+        <form class="row align-items-center" style="padding-top: 2em">
           <div class="col-md-6 col-lg-3 pt-1">
             <div class="fw-bold fs-5 mb-3 text-white">Subscribe :</div>
           </div>
           <div class="col-md-6 col-lg-7 mb-3 position-relative">
-            <i class="envelope fa-solid fa-envelope-circle-check d-none d-md-block"></i>
+            <i
+              class="envelope fa-solid fa-envelope-circle-check d-none d-md-block"
+            ></i>
             <input
               class="w-100 p-2"
               type="text"
@@ -793,11 +990,7 @@
         <div class="row">
           <div class="col-md-6 col-lg-4">
             <div class="info mb-5">
-              <img
-                src="images/logo png.png"
-                alt=""
-                class=" w-50 h-50"
-              />
+              <img src="images/logo png.png" alt="" class="w-50 h-50" />
               <p class="mb-5">
                 Pellentesque in ipsum id orci porta dapibus. Vivamus magna
                 justo, lacinia eget consectetur sed, convallis at tellus.
@@ -832,7 +1025,10 @@
                 <li>Contact Us</li>
               </ul>
             </div>
-            <h2 class="custom-h2 text-light text-uppercase" style="margin-top: 182px">
+            <h2
+              class="custom-h2 text-light text-uppercase"
+              style="margin-top: 182px"
+            >
               Location <i class="fa-solid fa-map-pin"></i>
             </h2>
           </div>
@@ -915,6 +1111,8 @@
     >
       © 2024 LilianaDev. All rights reserved
     </p>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <script src="js/smart.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/all.min.js"></script>
